--- a/app/templates/client_base.html
+++ b/app/templates/client_base.html
@@ -127,7 +127,7 @@
         </div>
     </div>
     {% endif %}
-    <div class="container my-5">
+    <div class="container-fluid my-5">
         {% block content %}
         <div class="container justify-content-center d-flex">
             <div class="form-structor zoomer">
